# eztrace-test

./: COPYING  Makefile  Makefile.in  README  README.md  ROADMAP  VERSION  aclocal.m4  bootstrap  config.cache  config.status  configure  configure.ac  eztrace.pc  libtool
.svn/: wc.db
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile  references.bib  user_manual.tex
example/: README
example/libexample_eztrace/: example_ev_codes.h
example/libexample_orig/: Makefile  example.h  main.c  static_example.c
extlib/: Makefile  Makefile.in
extlib/fxt/: INSTALL.FKT  Makefile  Makefile.in  TODO  bootstrap  config.h  config.h.in~  config.status  configure  example.c  fxt.pc  libtool
extlib/fxt/doc/: FxT.bib  (+3 more)
extlib/gtg/: Makefile  Makefile.in  config.status  configure  gtg.pc  libtool
extlib/opari/: CHANGES  LICENSE  Makefile.am
extlib/opari2/: Makefile  Makefile.in  aclocal.m4  config.status  configure  user_provided_configure_args
src/core/: Makefile  Makefile.in  config.h  config.h.in  ev_codes.h  eztrace  eztrace.c  eztrace.c.in  eztrace.h  eztrace.old  eztrace_array.c  eztrace_array.h  eztrace_avail  eztrace_avail.c  eztrace_convert  eztrace_convert.c  eztrace_convert.h  eztrace_convert_core.h  eztrace_convert_macros.h  eztrace_convert_types.h  eztrace_core.c  eztrace_create_plugin  eztrace_create_plugin.in  eztrace_hierarchical_array.c  eztrace_hook.h  eztrace_list.h  eztrace_loaded  eztrace_loaded.c  eztrace_stats  eztrace_stats_core.h  libeztrace-autostart.la  libeztrace-convert-core.la  libeztrace.la  libeztrace_autostart_la-eztrace_core.lo  libeztrace_autostart_la-pthread_core.lo  libeztrace_convert_core_la-eztrace_array.lo  libeztrace_convert_core_la-eztrace_convert_core.lo  libeztrace_convert_core_la-eztrace_hierarchical_array.lo  libeztrace_convert_core_la-eztrace_stats_core.lo  libeztrace_la-eztrace_core.lo  (+3 more)
src/modules/omp/: Makefile  Makefile.am  Makefile.in  eztrace_cc  eztrace_cc.in  gomp.c  libeztrace-autostart-omp.la  libeztrace-convert-omp.la  libeztrace-omp.la  libeztrace_autostart_omp_la-gomp.lo  libeztrace_convert_omp_la-eztrace_convert_gomp.lo  libeztrace_omp_la-gomp.lo  libpomp2.la  libpomp2_la-pomp2_lib.lo  pomp2_lib.h
src/modules/omp/.deps/: libeztrace_autostart_omp_la-gomp.Plo  libeztrace_convert_omp_la-eztrace_convert_gomp.Plo  libeztrace_omp_la-gomp.Plo  libpomp2_la-pomp2_lib.Plo
src/modules/omp/.libs/: libeztrace-autostart-omp.la  libeztrace-autostart-omp.lai  libeztrace-autostart-omp.so.0  libeztrace-autostart-omp.so.0.0.0  libeztrace-autostart-omp.so.0.0.0T  libeztrace-convert-omp.la  libeztrace-convert-omp.lai  libeztrace-convert-omp.so.0.0.0  libeztrace-convert-omp.so.0.0.0T  libeztrace-omp.la  libeztrace-omp.lai  libeztrace-omp.so.0  libeztrace-omp.so.0.0.0  libeztrace-omp.so.0.0.0T  libpomp2.la  libpomp2.lai  libpomp2.so.0.0.0
src/modules/stdio/: Makefile  Makefile.am  Makefile.in  eztrace_convert_stdio.c  libeztrace-autostart-stdio.la  libeztrace-convert-stdio.la  libeztrace-stdio.la  libeztrace_autostart_stdio_la-stdio.lo  libeztrace_convert_stdio_la-eztrace_convert_stdio.lo  libeztrace_stdio_la-stdio.lo
src/modules/stdio/.deps/: libeztrace_autostart_stdio_la-stdio.Plo  libeztrace_convert_stdio_la-eztrace_convert_stdio.Plo  libeztrace_stdio_la-stdio.Plo
src/modules/stdio/.libs/: libeztrace-autostart-stdio.la  libeztrace-autostart-stdio.lai  libeztrace-autostart-stdio.so.0.0.0  libeztrace-autostart-stdio.so.0.0.0T  libeztrace-convert-stdio.la  libeztrace-convert-stdio.lai  libeztrace-convert-stdio.so.0  libeztrace-convert-stdio.so.0.0.0  libeztrace-convert-stdio.so.0.0.0T  libeztrace-stdio.la  libeztrace-stdio.lai  libeztrace-stdio.so.0.0.0  libeztrace-stdio.so.0.0.0T
src/pptrace/: binary.c  errors.c  errors.h  hijack.h  isize.c  memory.c  memory.h  pptrace.c  pptrace.h  tracing.h
test/automake/: Makefile  Makefile.in  testcommon.h  testmemory.c  testmpiring.c  testopenmplock.c  testopenmpnestlock.c  testpthreadcond.c  testpthreadtest.c  teststatic.c
test/memory/: Makefile  Makefile.in
test/module_generator/: example.tpl
test/mpi/: Makefile  Makefile.am  Makefile.in  mpi_multiring.c  mpi_ring.c  persistent.c  test_mpi.c
test/openmp/: Makefile  Makefile.am  Makefile.in  openmp_nowait_c.c  simple.c  test_nest_lock.c  test_task.c
test/pthread/: Makefile  Makefile.am  Makefile.in  cond.c  dummy_thread.c  test_sigsegv.c
test/static/: Makefile  Makefile.in  staticlib.c
test/stdio/: Makefile  Makefile.am  Makefile.in
(+876 files in other folders)
