# Copyright © CNRS, INRIA, Université Bordeaux 1
# See COPYING in top-level directory.

check_PROGRAMS = cond dummy_thread test_pthread

cond_SOURCES = cond.c
dummy_thread_LDFLAGS = -lpthread

dummy_thread_SOURCES = dummy_thread.c
dummy_thread_LDFLAGS = -lpthread

test_pthread_SOURCES = test_pthread.c
test_pthread_LDFLAGS = -lpthread
